returns current user's information
