# src/api/controllers/user.js
@@ -1,8 +1,0 @@
-import { writeJsonResponse } from '#utils/express.js';
-
-export async function getUser(req, res, next) {
-    const userId = res.locals.auth.userId
-    writeJsonResponse(res, 200, {
-        message: `User information for ${userId}`
-    })
-}
